--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>IsLibrary - Islamic Books, Authors and Publication</title>
+    <title>Book Store - Book Guide Author, Publication and Store</title>
     <!-- CUSTOM STYLE -->
     <link href="style.css" rel="stylesheet">
     <!-- THEME TYPO -->
@@ -71,8 +71,7 @@
                 <button class="kode_search_box-submit" type="submit">Search</button>
             </form>
             <span class="kode_search_box-close"></span>
-        </div>
-        <!-- /kode_search_box -->
+        </div><!-- /kode_search_box -->
         <div class="overlay"></div>
         <div class="logo-container">
             <div class="container">
