--- a/about-us.html
+++ b/about-us.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from kodeforest.net/html/books/store/about-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 15 Nov 2016 23:58:29 GMT -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,13 +38,13 @@
     <![endif]-->
 </head>
 <body>
-<div id="loader-wrapper">
+<!--<div id="loader-wrapper">
     <div id="loader"></div>
 
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
 
-</div>
+</div>-->
 <!--WRAPPER START-->
 <div class="wrapper">
     <!--HEADER START-->
@@ -990,6 +989,7 @@
     </div>
 </div>
 <!--WRAPPER END-->
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -1004,5 +1004,4 @@
 <script src="js/functions.js"></script>
 </body>
 
-<!-- Mirrored from kodeforest.net/html/books/store/about-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 15 Nov 2016 23:59:52 GMT -->
 </html>
