--- a/book-listing-1-w-sidebar.html
+++ b/book-listing-1-w-sidebar.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from kodeforest.net/html/books/store/book-listing-1-w-sidebar.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 16 Nov 2016 00:03:07 GMT -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,13 +38,13 @@
     <![endif]-->
 </head>
 <body>
-<div id="loader-wrapper">
+<!--<div id="loader-wrapper">
     <div id="loader"></div>
 
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
 
-</div>
+</div>-->
 <!--WRAPPER START-->
 <div class="wrapper">
     <!--HEADER START-->
