updated the book details page by adding some details and removing unwanted info.

--- a/book-detail.html
+++ b/book-detail.html
@@ -128,7 +128,11 @@
                         <input type="text" placeholder="Enter Your Title">
                     </div>
                     <div class="col-md-2">
-                        <select></select>
+                        <select>
+                            <option value="all">All Categories</option>
+                            <option value="fiqh">Fiqh</option>
+                            <option value="seerah">Seerah</option>
+                        </select>
                     </div>
                     <div class="col-md-2">
                         <button>Search</button>
@@ -294,16 +298,16 @@
                             </div>
                             <div class="col-md-7">
                                 <div class="kode-text">
-                                    <h2>Apllication Health and Well-Beign</h2>
+                                    <h2>Application Health (Book Title)</h2>
                                     <div class="product-review">
                                         <div class="rating">
                                             <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
                                         </div>
-                                        <p>4 Customer reveiws</p>
+                                        <p>4 Customer reviews</p>
                                     </div>
                                     <div class="product-price">
                                         <h4>$ 19.90</h4>
-                                        <p>Author : <span class="color">Robert L. Lukdke</span></p>
+                                        <p>Author : <span class="color">Alege Ali</span></p>
                                     </div>
                                     <div class="book-text">
                                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
@@ -311,15 +315,19 @@
                                             veritatis et quasi architecto.</p>
                                     </div>
                                     <div class="book-text">
-                                        <p>Category: Books.</p>
-                                        <p>Tag: books.</p>
-                                        <p>Author: Daniel Abraham</p>
-                                        <p>Publisher: Journal inc</p>
-                                        <p>Product ID: 1100</p>
+                                        <p>Category: History.</p>
+                                        <p>Tag: arabian.</p>
+                                        <p>Author: Alege Ali</p>
+                                        <p>Publisher: Irshaad Tech</p>
+                                        <p>Year of Publication: 2016</p>
+                                        <p>Number of Pages: 750</p>
+                                        <p>Language: Spanish</p>
+                                        <p>Book ISBN: 1100-1101-1001</p>
+                                        <p>Book ID: 1100</p>
                                     </div>
-                                    <a href="#" class="add-to-cart">Add To Cart</a>
-                                    <a href="#" class="add-to-cart">Add To Wishlist</a>
-                                    <a href="#" class="add-to-cart">Get a Quote</a>
+                                    <a href="#" class="add-to-cart">Download</a>
+                                    <a href="#" class="add-to-cart">Add To Shelve</a>
+                                    <a href="#" class="add-to-cart">Read Online</a>
                                 </div>
                             </div>
                         </div>
@@ -335,8 +343,8 @@
                                                        data-toggle="tab">Reviews</a></li>
                             <li role="presentation"><a href="#tags" aria-controls="tags" role="tab" data-toggle="tab">Tags</a>
                             </li>
-                            <li role="presentation"><a href="#CustomTab" aria-controls="CustomTab" role="tab"
-                                                       data-toggle="tab">Custom Tab</a></li>
+                            <li role="presentation"><a href="#author" aria-controls="author" role="tab"
+                                                       data-toggle="tab">About the Author</a></li>
                         </ul>
                         <!--NAV TABS END-->
                         <!--TAB PANEL START-->
@@ -439,7 +447,7 @@
                                     <a href="#">eirmod</a>
                                 </div>
                             </div>
-                            <div role="tabpanel" class="tab-pane fade" id="CustomTab">
+                            <div role="tabpanel" class="tab-pane fade" id="author">
                                 <p>Ipsum euismod his at. Eu putent habemus voluptua sit, sit cu rationibus scripserit,
                                     modus voluptaria ex per. Aeque dicam consulatu eu his, probatus neglegentur
                                     disputationi sit et. Ei nec ludus epicuri petentium, vis appetere maluisset ad. Et
@@ -485,8 +493,9 @@
                                             <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
                                         </div>
                                         <p>Sara Wisseman</p>
-                                        <p class="price">$334.50</p>
-                                        <a href="#" class="add-to-cart">Add To Cart</a>
+                                        <p>some details about book and 3books related to current books by title or
+                                            category</p>
+                                        <a href="#" class="add-to-cart">View Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -506,8 +515,9 @@
                                             <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
                                         </div>
                                         <p>William S.</p>
-                                        <p class="price">$24.75</p>
-                                        <a href="#" class="add-to-cart">Add To Cart</a>
+                                        <p>some details about book and 3books related to current books by title or
+                                            category</p>
+                                        <a href="#" class="add-to-cart">View Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -527,8 +537,9 @@
                                             <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
                                         </div>
                                         <p>Ann Grannger</p>
-                                        <p class="price">$777.75</p>
-                                        <a class="add-to-cart" href="#">Add To Cart</a>
+                                        <p>some details about book and 3books related to current books by title or
+                                            category</p>
+                                        <a href="#" class="add-to-cart">View Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -625,7 +636,7 @@
     </footer>
     <div class="copyrights">
         <div class="container">
-            <p>Copyrights © 2015-16 KodeForest. All rights reserved</p>
+            <p>Copyrights © 2015-16 IrhsaadTech. All rights reserved</p>
             <div class="cards"><img src="images/cards.png" alt=""></div>
         </div>
     </div>
